compiler/fir/analysis-tests/testData/resolve/problems/incompleteWhen.kt
fun main(args: Array<String>) {
    val x = 42
    when (x) {is<!SYNTAX!><!>}
}
